полноценная игра с возможность доработки

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ThreeJS Project Template</title>
+        <title>The wilderness</title>
     </head>
     <body>
         
         <div class="container">
        <canvas class="canvas"></canvas>
         <div class="crosshair"></div>
-<div class="ammo-display" id="ammo-display">Патроны 4/4</div>
         </div>
  
     </body>
