--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         <div class="container">
        <canvas class="canvas"></canvas>
         <div class="crosshair"></div>
+                 <div id="timer">Time: 00:00</div>
         </div>
  
     </body>
